Fixed alignment issue on speaking page

--- a/style.css
+++ b/style.css
@@ -101,6 +101,7 @@ div.desc {
 div.column {
     float: left;
     width: 30%;
+    height: 350px;
     font-family: verdana;
     font-size: 15px;
     color: white;
